tests/bad_dataflow_3.out
STDOUT:

STDERR:
CFG lowering error in function main: MalformedPhiInfo(MalformedPhiInfo { infos: [SingleMalformedPhiInfo { bb_id: BBId(3), phi_dest: ValueRef(7, 29..30, Some(VarId(0)), None), phi_var_id: Some(VarId(0)), sources: {BBId(1): Value(ValueRef(3, 54..59, Some(VarId(0)), None))}, missing_sources: {BBId(2)} }], malformed_assignments: [SingleMalformedAssignmentInfo { bb_id: BBId(3), dest_val: ValueRef(4, 91..92, Some(VarId(0)), None), assigned_val: Value(ValueRef(7, 29..30, Some(VarId(0)), None)), missing_sources: {} }], phi_assignments: [], malformed_tails: [SingleMalformedTailInfo { bb_id: BBId(3), missing_sources: {} }], blocks: [BasicBlock { id: BBId(0), phi: [], instructions: [Assign { dest: ValueRef(0, 8..95, Some(VarId(1)), None), val: Function { name: "main" } }, Assign { dest: ValueRef(1, 41..42, None, None), val: Const(1) }], tail: CondBranch { cond: ValueRef(1, 41..42, None, None), then_bb: BBId(1), else_bb: BBId(2) }, successors: [BBId(1), BBId(2)], predecessors: [] }, BasicBlock { id: BBId(1), phi: [], instructions: [Assign { dest: ValueRef(5, 12..16, Some(VarId(1)), Some(BBId(0))), val: Value(ValueRef(0, 8..95, Some(VarId(1)), None)) }, Assign { dest: ValueRef(2, 58..59, None, None), val: Const(5) }, Assign { dest: ValueRef(3, 54..59, Some(VarId(0)), None), val: Value(ValueRef(2, 58..59, None, None)) }], tail: UncondBranch { target: BBId(3) }, successors: [BBId(3)], predecessors: [BBId(0)] }, BasicBlock { id: BBId(2), phi: [], instructions: [Assign { dest: ValueRef(6, 12..16, Some(VarId(1)), Some(BBId(0))), val: Value(ValueRef(0, 8..95, Some(VarId(1)), None)) }], tail: UncondBranch { target: BBId(3) }, successors: [BBId(3)], predecessors: [BBId(0)] }, BasicBlock { id: BBId(3), phi: [PhiCfgInstruction { dest: ValueRef(7, 29..30, Some(VarId(0)), None), sources: {BBId(1): Value(ValueRef(3, 54..59, Some(VarId(0)), None))}, var_id: Some(VarId(0)) }, PhiCfgInstruction { dest: ValueRef(8, 12..16, Some(VarId(1)), None), sources: {BBId(1): Value(ValueRef(5, 12..16, Some(VarId(1)), Some(BBId(0)))), BBId(2): Value(ValueRef(6, 12..16, Some(VarId(1)), Some(BBId(0))))}, var_id: Some(VarId(1)) }], instructions: [Assign { dest: ValueRef(4, 91..92, Some(VarId(0)), None), val: Value(ValueRef(7, 29..30, Some(VarId(0)), None)) }], tail: Return { value: Some(ValueRef(4, 91..92, Some(VarId(0)), None)) }, successors: [], predecessors: [BBId(1), BBId(2)] }] })
error: Use before initialization detected during CFG lowering
   ┌─ tests/bad_dataflow_3.c:10:12
   │
 3 │     int x;
   │         - Variable declaration site
   ·
10 │     return x;
   │            ^ value not valid due to prior malformed phi
   │
   = note: this means that there are assignments to this variable, but not on all possible code paths

---
digraph MalformedPhiInfo {
  BB0 [label="BB0:\n    %0 = function main (main)\n    %1 = const 1\n    br_cond %1 ? BB1 : BB2;\n"];
  BB1 [label="BB1:\n    %5 = %0 (main)\n    %2 = const 5\n    %3 = %2 (x)\n    br BB3\n"];
  BB2 [label="BB2:\n    %6 = %0 (main)\n    br BB3\n"];
  BB3 [label="BB3:\n    %7 = Φ(%3@BB1 [malformed: missing from BBs [2]]) (x)\n    %8 = Φ(%5@BB1, %6@BB2) (main)\n    %4 = %7 [malformed: missing from BBs []] (x)\n    return %4\n"];
  BB0 -> BB1;
  BB0 -> BB2;
  BB1 -> BB3;
  BB2 -> BB3 [label="missing vars: x",fontcolor=red];
}

Error: CFG lowering failed
